test/libsolidity/syntaxTests/constructor/external_constructor.sol
contract test {
	constructor() external {}
}
// ----
// TypeError: (17-42): Constructor must be public or internal.
